# Palindroms

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/backend/: settings.py  urls.py
backend/books/: admin.py  models.py  serializers.py  views.py
